# DUNE

./: .gitignore  CMakeLists.txt  COPYRIGHT.md  README.md  config.hpp  constants.hpp  main.cpp  opencv-TOS.md  startup.sh  util.hpp  util_intel.hpp  utils.cpp  utils.hpp
00_DOC/: Abstract.odt  DUNE_Code_Structure_Norms.md  DUNE_Dependency_Installer_Guide.docx  Dune_Timetable.ods  File Head Ascii Art.md  Filter Kernel attempt.hpp  the.blend  the.blend1
10_DEV/: main.cpp  q.sh
10_DEV/Utilities/: Window.cpp  utils.cpp  utils.hpp
10_DEV/shader/: #template.glsl
80_DEV/: CMakeLists.txt  Calibration.hpp  RTE.hpp  Texture.hpp  TouchwndRes.cpp  TouchwndRes.hpp  Window.cpp  Window.hpp  assetRTE.hpp  assets.dres  calibRTE.hpp  config.hpp  main.cpp  matdef.hpp  util_intel.hpp  utils.cpp  utils.hpp
80_DEV/Pipeline/: AssetRTE.hpp  Calib.hpp  CalibRTE.hpp  CameraProvider.hpp  FilterAssetOverlayWorker.hpp  FilterColorizeWorker.hpp  FilterDifferenceWorker.hpp  FilterDiscreticiser.hpp  FilterInterpolatorWorker.hpp  FilterLineWorker.hpp  FilterPerlinWorker.hpp  FilterScaleWorker.hpp  FilterStripeWorker.hpp  FilterTemporalWorker.hpp  FunnyW.hpp  GameDrawWorker.hpp  GameLogicWorker.hpp  Pipeline.cpp  Pipeline.hpp  Provider.hpp  ResourcePlacementWorker.hpp  TemporaryFilter.hpp  Test_Provider.hpp  Test_Worker_1ms.hpp  Test_Worker_1s.hpp  Test_Worker_2s.hpp  Translator.hpp  VisualCutWorker.hpp  WindowWorker.hpp  Worker.hpp  checker.hpp
80_DEV/Utilities/: Texture.cpp  Window.cpp  Window.hpp  utils.cpp  utils.hpp
80_DEV/assets/: MakeDLogo.bash
80_DEV/assets/AssetMaker/: am.cpp  makefile
80_DEV/assets/DuneLogoMaker/: dlm.cpp  makefile
80_DEV/cmake/: utils.cmake
80_DEV/dependencies/: stb_easy_font.h
80_DEV/manager/: DControlManager.cpp  DControlManager.hpp  DManager.cpp  DManager.hpp  DPipelineManager.hpp  DrsGrabberManager.hpp
80_DEV/pipeline/: CameraProvider.hpp  Pipeline.cpp  Provider.hpp  TestProvider.hpp  Worker.hpp
80_DEV/pipeline/game/: GameDrawWorker.hpp  GameLogicWorker.hpp
80_DEV/pipeline/workers/: FilterAssetOverlayWorker.hpp  FilterAssetPlacementWorker.hpp  FilterColorizeWorker.hpp  FilterDifferenceWorker.hpp  FilterDiscreticiser.hpp  FilterInterpolatorWorker.hpp  FilterLineWorker.hpp  FilterPerlinWorker.hpp  FilterResourcePlacementWorker.hpp  FilterScaleWorker.hpp  FilterStripeWorker.hpp  FilterTemporalWorker.hpp  FilterTranslatorWorker.hpp  FilterVisualCutWorker.hpp  WindowWorker.hpp
80_DEV/staticassets/: df_prev.dres  mc_prev.dres  smooth_prev.dres  stripe_prev.dres
80_DEV/utils/: MatIO.hpp  PerlinNoise.hpp  Utils.cpp  Utils.hpp  Window.cpp  Window.hpp
80_DEV/webserver/: Webserver.cpp  Webserver.hpp  index.html
81_DEV_UI/: package-lock.json  package.json
81_DEV_UI/components/: Button.tsx  HomeButton.tsx
81_DEV_UI/pages/: index.tsx
81_DEV_UI/styles/: Button.module.css  Home.module.css  globals.css
81_DEV_WEB/: package-lock.json
Filter/: Filter.cpp  Filter.hpp
Utilities/: Texture.cpp  Texture.hpp  Window.cpp  Window.hpp  utils.cpp  utils.hpp
cmake/: utils.cmake
dependencies/glfw/: CMakeLists.txt
shader/: #template.glsl  triangle.glsl
